[package]
name = "ck3json"
version = "0.3.1"
authors = ["J. Zebedee <zebedee@code.gripe>"]
description = "Convert CK3 files to JSON"
license = "MIT"
repository = "https://github.com/scorpdx/ck3json"
edition = "2018"

[dependencies]
clap = "2.33.3"
pest = "2.1.3"
pest_derive = "2.1.0"
encoding_rs_io = "0.1.7"
ck3save = "0.1.4"

[profile.release]
opt-level = 3
lto = true